<resources>
    <string name="app_name">TrabalhoFinalPA</string>
    <string name="contato">Contato</string>
    <string name="idade">Idade</string>
    <string name="morada">Morada</string>
    <string name="nome">Nome</string>
    <string name="enviar">Enviar</string>
    <string name="voluntario">Voluntário</string>
    <string name="pessoa_de_risco">Pessoa de risco</string>
    <string name="ver_dados">VER DADOS</string>
    <string name="editar">editar</string>
    <string name="apagar">apagar</string>
    <string name="id">ID</string>
</resources>
