<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nome"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/idade"
                android:inputType="number" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextContato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/contato"
                    android:inputType="phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMorada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/morada"
                        android:inputType="textLongMessage" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <RadioButton
                            android:id="@+id/radioButtonVoluntario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/voluntario" />

                        <RadioButton
                            android:id="@+id/radioButtonPessoaRisco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/pessoa_de_risco" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/buttonEnviar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="8dp"
                        android:onClick="enviar"
                        android:text="@string/enviar" />

                    <Button
                        android:id="@+id/buttonVerDados"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/ver_dados" />

                    <Button
                        android:id="@+id/buttonEditar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/editar" />

                    <Button
                        android:id="@+id/buttonApagar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/apagar" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

